--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
             <!-- Today's Card -->
             <div class="temp-card shadow">
               <div class="day-and-date d-flex justify-content-between">
-                <p id="today">Monday</p>
-                <p id="today-date">3 May</p>
+                <p id="today"></p>
+                <p id="today-date"></p>
               </div>
 
               <div class="temp-datails">
@@ -143,8 +143,9 @@
 
             <!-- Next Days Cards -->
             <div class="temp-card text-center shadow">
-              <div class="day-and-date">
-                <p class="nextDay">Tuesday</p>
+              <div class="day-and-date d-flex justify-content-between">
+                <p class="nextDay"></p>
+                <p class="nextDate"></p>
               </div>
 
               <div class="temp-datails">
@@ -159,8 +160,9 @@
             </div>
 
             <div class="temp-card text-center shadow">
-              <div class="day-and-date">
-                <p class="nextDay">Wednsday</p>
+              <div class="day-and-date d-flex justify-content-between">
+                <p class="nextDay"></p>
+                <p class="nextDate"></p>
               </div>
 
               <div class="temp-datails">
