--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="#"
+                <a class="nav-link home" href="#"
                   >Home <span class="sr-only">(current)</span></a
                 >
               </li>
